deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: lab-httpd
      app.kubernetes.io/component: lab-httpd
      app.kubernetes.io/instance: lab-httpd
    name: lab-httpd
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: lab-httpd
    template:
      metadata:
        labels:
          deploymentconfig: lab-httpd
      spec:
        containers:
        - image: lab-httpd
          imagePullPolicy: Always
          name: lab-httpd
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - lab-httpd
        from:
          kind: ImageStreamTag
          name: lab-httpd:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: lab-httpd
      app.kubernetes.io/component: lab-httpd
      app.kubernetes.io/instance: lab-httpd
    name: lab-httpd
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: lab-httpd
      app.kubernetes.io/component: lab-httpd
      app.kubernetes.io/instance: lab-httpd
    name: lab-httpd
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: lab-httpd
      weight: 100
    wildcardPolicy: None
